# Spark-store-gtk

./: .gitmodules  Cargo.toml  README.md
day1/: main.rs
day2/: main.rs
day3/: main.rs
day4/: main.rs  tool.rs
resources/: resources.gresource.xml
src/: .main.rs.swp  .page1.rs.swp  config.rs  gtk.css  lib.rs  main.rs  page1.rs
