[package]
name = "Sparkstore-gtk"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["gdtk","gtkdownloadbar"]

[dependencies]
gtk = "0.14.0"
glib = "0.14.2"
gio = "0.14.0"
gdk = "0.14.0"
serde_json = "1.0"
surf = "2.2.0"
futures = "0.3"
gdtk = {path = "./gdtk"}
gtkdownloadbar = {path = "./gtkdownloadbar"}
# crossbeam = "0.8"

[build-dependencies]
gio = "0.14.0"

[[bin]]
name = "day1"
path = "day1/main.rs"

[[bin]]
name = "day2"
path = "day2/main.rs"

[[bin]]
name = "day3"
path = "day3/main.rs"

[[bin]]
name = "day4"
path = "day4/main.rs"
